Refactor: Changed font sizes, and headings

--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -15,10 +15,10 @@
 <!-- Main Edit Products Container -->
 <div class="container">
     <div class="row">
-        <div class="col-12 col-md-6">
+        <div class="col-12 col-md-6 mt-4">
             <hr />
-            <h2 class="logo-font mb-4">Product Management</h2>
-            <h5 class="text-muted">Edit a Product</h5>
+            <h2 class="logo-font mb-4 text-center text-black">Product Management</h2>
+            <h5 class="text-muted text-center">Edit a Product</h5>
             <hr />
         </div>
     </div>
