--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -8,8 +8,8 @@
 {% block inner_content %}
 
 <hr>
-<h2 class="logo-font mb-4">{% trans "Sign In" %}</h2>
-<hr>
+<h2 class="logo-font mb-4 text-center text-black mb-4">{% trans "Sign In" %}</h2>
+
 
 {% get_providers as socialaccount_providers %}
 
@@ -31,9 +31,10 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
 {% include "socialaccount/snippets/login_extra.html" %}
 
 {% else %}
-<p class="mb-5">{% blocktrans %}If you have not created an account yet, then please
+<p class="small text-muted text-center">{% blocktrans %}If you have not created an account yet, then please
 <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
 {% endif %}
+<hr>
 
 <form class="login" method="POST" action="{% url 'account_login' %}">
   {% csrf_token %}
