--- a/templates/allauth/account/password_reset_from_key_done.html
+++ b/templates/allauth/account/password_reset_from_key_done.html
@@ -5,7 +5,8 @@
 
 {% block inner_content %}
     <hr>
-    <h2 class="logo-font mb-4">{% trans "Change Password" %}</h2>
+    <h2 class="logo-font mb-4 text-center text-black mb-4">{% trans "Change Password" %}</h2>
+    <p class="text-muted text-center">{% trans 'Your password is now changed.' %}</p>
     <hr>
-    <p>{% trans 'Your password is now changed.' %}</p>
+    
 {% endblock %}
