--- a/templates/allauth/account/signup_closed.html
+++ b/templates/allauth/account/signup_closed.html
@@ -6,8 +6,9 @@
 
 {% block inner_content %}
 <hr>
-<h2 class="logo-font mb-4">{% trans "Sign Up Closed" %}</h2>
+<h2 class="logo-font mb-4 text-center text-black mb-4">{% trans "Sign Up Closed" %}</h2>
+<p>{% trans "We are sorry, but the sign up is currently closed." %}</p>
 <hr>
 
-<p>{% trans "We are sorry, but the sign up is currently closed." %}</p>
+
 {% endblock %}
