--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -16,7 +16,7 @@
     <!-- Main Add Products Container -->
     <div class="container">
         <div class="row">
-            <div class="col-12 col-md-6 mx-auto">
+            <div class="col-12 col-md-6 mt-4 mx-auto">
                 <hr>
                 <h2 class="logo-font mb-4 text-center text-black">Product Management</h2>
                 <h5 class="text-muted text-center">Add a Product</h5>
