--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -15,8 +15,10 @@
     <!-- Main Products Container -->
     <div class="container-fluid">
         <div class="row">
-            <div class="col text-center mt-3">
-                <h2 class="logo-font">Products</h2>
+            <div class="col text-center mt-4">
+                <hr>
+                <h2 class="logo-font mb-4 mt-4 text-center text-black">Products</h2>
+                <h5 class="text-muted text-center">Browse Our Products</h5>
                 {% for c in current_categories %}
                     <a class="category-badge text-decoration-none" href="{% url 'products' %}?category={{ c.name }}">
                         <span class="p-2 mt-2 badge badge-white text-black rounded-0 border border-dark">{{ c.friendly_name }}</span>
@@ -25,7 +27,7 @@
                 <a class="category-badge text-decoration-none" href="{% url 'products' %}?category=sports_bra,leggings,shorts,tops_t-shirts,sports_nutrition,fitness_equipment{{ c.name }}">
                     <span class="p-2 mt-2 badge badge-white text-black rounded-0 border border-dark">Show All Products</span>
                 </a>
-                <hr class="w-50 mb-1">
+                <hr>
             </div>
         </div>
         <!-- Search and sorting -->
