--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -15,16 +15,16 @@
 <!-- Main Profile Container -->
 <div class="container">
     <div class="row">
-        <div class="col">
+        <div class="col mt-4">
             <hr />
-            <h2 class="logo-font mb-4">My Profile</h2>
+            <h2 class="logo-font mb-4 text-center text-black mb-4">My Profile</h2>
+            <p class="text-muted text-center">Default Delivery Information</p>
             <hr />
         </div>
     </div>
     <!-- Main delivery info container -->
     <div class="row">
         <div class="col-12 col-lg-6">
-            <p class="text-muted">Default Delivery Information</p>
             <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
                 <label for="id_default_phone_number" hidden>Phone Number</label>
                 <label for="id_default_street_address1" hidden>Street Address 1</label>
@@ -33,12 +33,14 @@
                 <label for="id_default_county" hidden>County</label>
                 <label for="id_default_postcode" hidden>Post Code</label>
                 {% csrf_token %} {{ form|crispy }}
-                <button class="btn btn-black rounded-1 text-uppercase float-right">Update Information</button>
+                <button class="btn btn-black rounded-0 text-uppercase float-right">Update Information</button>
             </form>
         </div>
         <!-- Main order history container -->
         <div class="col-12 col-lg-6">
-            <p class="text-muted">Order History</p>
+            <hr>
+            <p class="text-muted text-center">Order History</p>
+            <hr>
             <div class="order-history table-responsive">
                 <table class="table table-sm table-borderless">
                     <thead>
