--- a/templates/allauth/account/account_inactive.html
+++ b/templates/allauth/account/account_inactive.html
@@ -6,8 +6,7 @@
 
 {% block inner_content %}
 <hr>
-<h2 class="logo-font mb-4">{% trans "Account Inactive" %}</h2>
-<hr>
-
+<h2 class="logo-font mb-4 text-center text-black mb-4">{% trans "Account Inactive" %}</h2>
 <p>{% trans "This account is inactive." %}</p>
+<hr>
 {% endblock %}
