--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -6,9 +6,10 @@
 
 {% block inner_content %}
 <hr>
-<h2 class="logo-font mb-4">{% trans "Sign Out" %}</h2>
+<h2 class="logo-font mb-4 text-center text-black mb-4">{% trans "Sign Out" %}</h2>
+<p class="small text-muted text-center">{% trans 'Are you sure you want to sign out?' %}</p>
 <hr>
-<p>{% trans 'Are you sure you want to sign out?' %}</p>
+
 
 <form method="post" action="{% url 'account_logout' %}">
   {% csrf_token %}
