--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -8,13 +8,14 @@
 {% block inner_content %}
 
     <hr>
-    <h2 class="logo-font mb-4">{% trans "Password Reset" %}</h2>
-    <hr>
+    <h2 class="logo-font mb-4 text-center text-black mb-4">{% trans "Password Reset" %}</h2>
+    
     {% if user.is_authenticated %}
     {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
 
-    <p class="mt-5">{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
+    <p class="small text-muted text-center">{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
+    <hr>
 
     <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
         {% csrf_token %}
@@ -23,5 +24,5 @@
         <input type="submit" class="btn btn-success mt-4" value="{% trans 'Reset My Password' %}" />
     </form>
 
-    <p class="mt-5">{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+    <p class="mt-5 text-center">{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
 {% endblock %}
