Refactor: Moved Bag JS in to separate file

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -122,18 +122,16 @@
 {{ block.super }}
 <script>
     $('.btt-link').click(function(e) {
-        window.scrollTo(0,0)
-    })
+        window.scrollTo(0,0);
+    });
 </script>
 {% include 'products/includes/quantity_input.html' %}
-
 <script>
     // Update quantity on click
     $('.update-link').click(function(e) {
         var form = $(this).prev('.update-form');
         form.submit();
-    })
-
+    });
     // Remove item and reload on click
     $('.remove-item').click(function(e) {
         var csrfToken = "{{ csrf_token }}";
@@ -146,6 +144,6 @@
          .done(function() {
              location.reload();
          });
-    })
+    });
 </script>
 {% endblock %}
