Corerctly indented HTML and added comments

--- a/bag/templates/bag/checkout-buttons.html
+++ b/bag/templates/bag/checkout-buttons.html
@@ -1,3 +1,4 @@
+<!-- Check out buttons -->
 <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg text-center">
     <span class="icon">
         <i class="fas fa-chevron-left"></i>
