--- a/templates/includes/toasts/toast_warning.html
+++ b/templates/includes/toasts/toast_warning.html
@@ -8,3 +8,20 @@
       {{ message }}
     </div>
   </div>
+
+  <div class="toast show fade text-white bg-warning" role="alert" aria-live="assertive" aria-atomic="true" data-mdb-color="success" data-mdb-autohide="false"></div>
+
+  <div aria-live="polite" aria-atomic="true" class="bg-dark position-relative bd-example-toasts">
+    <div class="toast-container position-absolute p-3" id="toastPlacement">
+      <div class="toast">
+        <div class="toast-header">
+          <img src="..." class="rounded me-2" alt="...">
+          <strong class="me-auto">Bootstrap</strong>
+          <small>11 mins ago</small>
+        </div>
+        <div class="toast-body">
+          {{ message }}
+        </div>
+      </div>
+    </div>
+  </div>
