--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -28,9 +28,9 @@
         </div>
         <div class="col">
             <div class="product-details-container mb-5 mt-md-5">
-                <p class="mb-0">{{ product.name }}</p>
+                <h4 class="mb-2 fw-bold text-black">{{ product.name }}</h4>
                 <div class="pricing" style="display: flex;">
-                    <p class="lead mb-0 text-left font-weight-bold">£{{ product.price }}</p>
+                    <p class="lead mb-2 text-left fw-bold text-black">£{{ product.price }}</p>
                     {% if is_product_in_favourites %}
                     <a href="{% url 'remove_product_from_favourites' product.id 'product' %}" aria-label="remove product from favourites" class="favourite favourite-remove text-danger ml-3"><i class="fas fa-heart"></i></a>
                     {% else %}
@@ -49,7 +49,7 @@
                         {% if product.rating %}
                         <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
                         {% else %}
-                        <small class="text-muted">No Rating</small>
+                        <small class="text-black">No Rating</small>
                         {% endif %} {% if request.user.is_superuser %}
                         <small class="ml-3">
                             <a href="{% url 'edit_product' product.id %}">Edit</a> |
@@ -57,7 +57,7 @@
                         </small>
                         {% endif %}
                         <!-- Products description -->
-                        <p class="mt-3">{{ product.description }}</p>
+                        <p class="mt-3 fw-bold text-black">{{ product.description }}</p>
                         <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
                             {% csrf_token %}
                             <div class="form-row">
