--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -15,10 +15,10 @@
     <!-- Main Products Container -->
     <div class="container-fluid">
         <div class="row">
-            <div class="col text-center mt-4">
+            <div class="col text-center bg-wild-blue-yonder">
                 <hr>
-                <h2 class="logo-font mb-4 mt-4 text-center text-black">Products</h2>
-                <h5 class="text-muted text-center">Browse Our Products</h5>
+                <h2 class="logo-font text-center text-black fw-bold fs-2">Products</h2>
+                <h5 class="text-center text-black">Browse Our Products</h5>
                 {% for c in current_categories %}
                     <a class="category-badge text-decoration-none" href="{% url 'products' %}?category={{ c.name }}">
                         <span class="p-2 mt-2 badge badge-white text-black rounded-0 border border-dark">{{ c.friendly_name }}</span>
@@ -73,23 +73,23 @@
                                 </a>
                                 {% endif %}
                                 <div class="card-body text-center">
-                                    <p class="text-muted">{{ product.name }}</p>
+                                    <p class="text-white fw-bold">{{ product.name }}</p>
                                 </div>
-                                <div class="card-footer bg-white pt-0 border-0 text-left">
+                                <div class="card-footer pt-0 border-0 text-left">
                                     <div class="row">
                                         <div class="col">
-                                            <p class="lead text-center font-weight-bold">£{{ product.price }}</p>
+                                            <p class="lead text-center text-black fw-bold">£{{ product.price }}</p>
                                             {% if product.category %}
                                             <p class="small mt-1 mb-0">
-                                                <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
+                                                <a class="text-black" href="{% url 'products' %}?category={{ product.category.name }}">
                                                     <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
                                                 </a>
                                             </p>
                                             {% endif %}
                                             {% if product.rating %}
-                                                <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
+                                                <small class="text-black"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
                                             {% else %}
-                                                <small class="text-muted">No Rating</small>
+                                                <small class="text-black">No Rating</small>
                                             {% endif %}
                                             {% if request.user.is_superuser %}
                                                 <small class="ml-3">
