Indented corrected and added comments

--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block content %}
-<!-- Overlay white background -->
+<!-- Overlay grey background -->
 <div class="overlay"></div>
 <!-- Main Profile Container -->
 <div class="container">
