--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
         {% block corejs %}
         <!-- Javascript -->
         <script src="https://kit.fontawesome.com/e9c73d7092.js" crossorigin="anonymous"></script>
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
         <!-- Stripe payments -->
@@ -88,12 +88,12 @@
                                 {% if favourites_count %}
                                     <div><i class="fas fa-list"></i></div>
                                     <p class="my-0">
-                                        Wishlist ({{ favourites_items }})
+                                        Wishlist ({{ favourites_items_count }})
                                     </p>
                                 {% else %}
                                    <div><i class="fas fa-list fa-lg"></i></div>
                                     <p class="my-0">
-                                        Wishlist (0)
+                                        Wishlist ({{ favourites_items_count }})
                                     </p>
                                 {% endif %}
                             </div>
