Removed new line from end of file

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -15,7 +15,7 @@
 {% block content %}
 <!-- Main Image Carousel -->
 <div class="slider">
-    <div class="slide current" data-bs-interval="1000">
+    <div class="slide current">
       <div class="content">
         <h2 class="">Fitness Equipment</h2>
         <p class="">View our extensive range of fitness equipment.</p>
@@ -31,33 +31,6 @@
       <div class="content">
         <h2>Fitness Classes</h2>
                 <p>View our extensive range of fitness classes.</p>
-      </div>
-    </div>
-    <div class="slide">
-      <div class="content">
-        <h1>Slide Four</h1>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit hic
-          maxime, voluptatibus labore doloremque vero!
-        </p>
-      </div>
-    </div>
-    <div class="slide">
-      <div class="content">
-        <h1>Slide Five</h1>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit hic
-          maxime, voluptatibus labore doloremque vero!
-        </p>
-      </div>
-    </div>
-    <div class="slide">
-      <div class="content">
-        <h1>Slide Six</h1>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit hic
-          maxime, voluptatibus labore doloremque vero!
-        </p>
       </div>
     </div>
   </div>
