--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -35,7 +35,8 @@
                     <div class="col">
                         {% include "bag/checkout-buttons.html" %}
                         <hr />
-                        <p class="text-muted">A summary of your bag contents is below</p>
+                        <p class="text-black">A summary of your bag contents is below</p>
+                        <hr>
                     </div>
                 </div>
                 {% for item in bag_items %}
