--- a/bag/templates/bag/checkout-buttons.html
+++ b/bag/templates/bag/checkout-buttons.html
@@ -1,4 +1,5 @@
 <!-- Check out buttons -->
+<div class="d-grid gap-2 col-lg-3 col-md-6">
 <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg text-center">
     <span class="icon">
         <i class="fas fa-chevron-left"></i>
@@ -11,3 +12,4 @@
         <i class="fas fa-lock"></i>
     </span>
 </a>
+</div>
