--- a/staticfiles/css/base.css
+++ b/staticfiles/css/base.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Lato:wght@100&display=swap');
 
+/* --- Global styling --- */
 html {
     height: 100%;
 }
@@ -7,7 +8,6 @@ html {
 body {
     height: calc(100vh - 164px);
     color: #555;
-
 }
 
 /* from Bulma */
@@ -19,87 +19,46 @@ body {
     width: 1.5rem;
 }
 
-/* WAVE Accessibily */
-.sr-only{
-    position:absolute;
-    left:-10000px;
-    top:auto;
-    width:1px;
-    height:1px;
-    overflow:hidden;
- }
-
 .bg-blue-yonder {
-    background-color: #4470AD !important;
+    background-color: #018190 !important;
 }
 
+/* To set colour on Footer and Info banner */ 
 .bg-wild-blue-yonder {
-    background-color:  #6888BE !important;
+    background-color:  #00b4d8 !important;
 }
 
+/* Style for logo font */ 
 .logo-font {
     text-transform: uppercase;
     font-size: 23px;
 }
 
+/* Main logo link */
 .main-logo-link {
     width: fit-content;
 }
 
-.shop-now-button {
-    background: black;
-    color: white;
-    min-width: 260px;
-}
-
-.btn-black {
-    background: black;
-    color: white;
-}
-
-.shop-now-button:hover,
-.shop-now-button:active,
-.shop-now-button:focus,
-.btn-black:hover,
-.btn-black:active,
-.btn-black:focus {
-    background: #222;
-    color: white;
-}
-
-.text-white {
-    color: #fff !important;
-    font-weight: 900;
-}
-
-
-  
-  
-
-
-/* Rename */
-.text-black {
-    color:#000 !important;
-}   
-
-.border-black {
-    border: 1px solid black !important;
-}
-
-.bg-black {
-    background: #000 !important;
-}
-
+/* Set overlay */
 .overlay {
 	height: 100%;
 	width: 100%;
 	top: 0;
 	left: 0;
 	position: fixed;
-	background: white;
+    background-color: #e9ecef;
 	z-index: -1;
 }
 
+.card-body {
+    background-color: #0077b6;
+}
+
+.card-footer {
+    background-color: #89c2d9;
+}
+
+/* Catergory badge */
 a.category-badge > span.badge:hover {
     background: #212529 !important;
     color: #fff !important;
@@ -128,20 +87,36 @@ a.category-badge > span.badge:hover {
     cursor: pointer;
 }
 
+/* Style buttons for shopping pages */ 
+.btn-outline-black {
+    background: white;
+    color: black !important; /* use important to override link colors for <a> elements */
+    border: 1px solid black;
+}
+
+.btn-black {
+    background: black;
+    color: white;
+}
+
+
 /* ------------------------------- Font Awesome */
-/* Overall font size if icons */
+/* Global style for icons */
 .fab {
     font-size: 25px;
 }
 
+/* Facebook */
 .fa-facebook {
     color: #3b5998;
 }
 
+/* Twitter */
 .fa-twitter {
     color: #1DA1F2;
 }
 
+/* Instagram */
 .fa-instagram {
     font-size:30px;
     background: #d6249f;
@@ -150,12 +125,12 @@ a.category-badge > span.badge:hover {
     -webkit-text-fill-color: transparent;
 }
 
+/* You tube */
 .fa-youtube {
     color: #FF0000;
 }
 
-/* ------------------------------- Contact Form */
-
+/* Font size for page headings */ 
 .display-6 {
     margin-top: 168px;
     font-size: 1.438rem;
@@ -163,12 +138,7 @@ a.category-badge > span.badge:hover {
     line-height: 1.2;
 }
 
-
-
-
-
 /* ------------------------------- Toasts */
-
 /* Toast container positioning */
 .message-container {
     position: fixed;
@@ -195,6 +165,7 @@ a.category-badge > span.badge:hover {
     overflow-y: auto;
 }
 
+/* WAVE validation */
 .sr-only{
     position:absolute;
     left:-10000px;
@@ -263,7 +234,7 @@ a.category-badge > span.badge:hover {
   }
 
   .allauth-form-inner-content a {
-      color: #17a2b8; /* text-info */
+      color: #0C6064; /* text-info */
   }
 
  /* Product Form */
@@ -295,6 +266,8 @@ a.category-badge > span.badge:hover {
     border-radius: 0;
 }
 
+
+
   /* fixed top navbar only on medium and up */
   @media (min-width: 992px) {
       .fixed-top-desktop-only {
@@ -308,15 +281,72 @@ a.category-badge > span.badge:hover {
       .header-container {
           padding-top: 164px;
       }
-  }
 
-  /* pad the top a bit when navbar is collapsed on mobile */
-  @media (max-width: 991px) {
-      .header-container {
-          padding-top: 116px;
-      }
-
-      body {
-          height: calc(100vh - 116px);
-      }
   }
+    
+/* --- Greater than 991px --- */
+@media screen and (max-width: 991px) {
+    /* --- Generic --- */
+    .header-container {
+        padding-top: 92px;
+    }
+
+    body {
+        height: calc(100vh - 116px);
+    }
+
+    .display-4.logo-font.text-black {
+        font-size: 2rem;
+    }
+
+    .nav-link {
+        padding: 0.15rem;
+    }
+
+    .nav-link i.fa-lg {
+        font-size: 1rem;
+    }
+}  
+    
+  /* X-SMALL SCREEN */
+@media (max-width: 320px) {
+    /* --- Generic --- */
+    .container {
+      max-width: 100%;
+    }
+
+    /* Hide catergoty badge*/
+    .category-badge{ 
+        display:none;
+    }
+
+    /* Logo font */
+    .logo-font {
+        font-size: 20px;
+        font-weight: bold;
+    }
+
+    /* Font awesome icons */
+    .fa-lg {
+        font-size: 1rem !important;
+        line-height: .75em;
+        vertical-align: -0.0667em;
+    }
+    
+    /* Font size for info banner */
+    #info-banner {
+        font-size: 16px;
+    }
+
+    /* Buttons for bag */
+    .btn btn-outline-black rounded-0 btn-lg,
+    .btn btn-black rounded-0 btn-lg {
+        font-size: 100px;
+    }
+
+    /* Dropdown menu font size */
+    .dropdown-menu >a{
+        font-size: 13px;
+        font-weight: bold;
+    }
+}
