Removed new line and end of file

--- a/wishlist/templates/wishlist/wishlist.html
+++ b/wishlist/templates/wishlist/wishlist.html
@@ -37,17 +37,17 @@
                 <div class="card-body">
                     <div class="row">
                         <div class="col-12">
-                            <h2 class="card-title font-black">{{ favourite.name }}</h2>
+                            <h2 class="card-title text-white">{{ favourite.name }}</h2>
                         </div>
                         <div class="col-12">
-                            <h3 class="font-weight-light font-black">{{ favourite.category.friendly_name }}</h3>
+                            <h3 class="font-weight-light text-white">{{ favourite.category.friendly_name }}</h3>
                         </div>
                         {% if favourite.pre_sale_price %}
-                        <div class="col-6 align-self-center font-black">
+                        <div class="col-6 align-self-center ftext-white">
                             <p class="mb-0 text-left font-weight-bold red-strikethrough">£{{ favourite.pre_sale_price }}</p>
                         </div>
                         {% endif %}
-                        <div class="col-6 align-self-center font-black">
+                        <div class="col-6 align-self-center text-white">
                             <strong>£{{ favourite.price }}</strong>
                         </div>
                     </div>
