--- a/templates/base.html
+++ b/templates/base.html
@@ -15,12 +15,10 @@
         <!-- Bootstrap css -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
          <!-- User style css -->
-        <link rel="stylesheet" href="{% static 'css/base.css' %}">
+         <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
         <!-- Favicon -->
         <link rel="icon" type="image/png" href="{{ MEDIA_URL }}favicon/favicon.ico"/>
-       
 
-        static/css/base.css
         {% endblock %}
         {% block extra_css %}
         {% endblock %}
