--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
     <!-- User style css -->
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="{{ MEDIA_URL }}/favicon.ico" />
+    <link rel="icon" type="image/png" href="{{ MEDIA_URL }}favicon/favicon.ico" />
 
     {% endblock %}
     {% block extra_css %}
