--- a/static/css/base.css
+++ b/static/css/base.css
@@ -317,7 +317,15 @@ a.category-badge>span.badge:hover {
 
     /* Font size for info banner */
     #info-banner {
-        font-size: 0.8rem;
+        font-size: 1rem;
+    }
+
+    .mb-1 {
+        margin-bottom: 0.25rem !important;
+    }
+
+    .mt-1 {
+        margin-top: 1rem !important;
     }
 }
 
