--- a/static/css/base.css
+++ b/static/css/base.css
@@ -199,7 +199,7 @@ a.category-badge>span.badge:hover {
 
 .allauth-form-inner-content input {
     border-color: #000;
-    border-radius: 0;
+    border-radius: 5px;
 }
 
 .allauth-form-inner-content label:not([for='id_remember']) {
