--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -1,15 +1,15 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <div class="container header-container">
-        <div class="overlay"></div>
-        <div class="row">
-            <div class="col-12 col-md-6 mt-4">
-                <div class="allauth-form-inner-content mb-4">
-                    {% block inner_content %}
-                    {% endblock %}
-                </div>
+<div class="container header-container">
+    <div class="overlay"></div>
+    <div class="row">
+        <div class="col-12 col-md-6 col-md-3 offset-md-3 mt-4">
+            <div class="allauth-form-inner-content mb-4">
+                {% block inner_content %}
+                {% endblock %}
             </div>
         </div>
     </div>
+</div>
 {% endblock %}
