--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -5,6 +5,8 @@
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
 {% block inner_content %}
+
+{% load crispy_forms_tags %}
 <hr>
 <h2 class="logo-font mb-4 text-center text-black mb-4">{% trans "Sign Up" %}</h2>
 
@@ -14,12 +16,13 @@
 
 <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
   {% csrf_token %}
-  {{ form.as_p }}
+  {{ form|crispy }}
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
   <a class="btn btn-outline-black rounded-0 mt-4" href="{% url 'account_login' %}">Back to Login</a>
   <button type="submit" class="btn btn-success mt-4">{% trans "Sign Up" %}</button>
 </form>
+
 
 {% endblock %}
