--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -6,50 +6,50 @@
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
 
 {% block inner_content %}
-<div class="shadow p-3 bg-body rounded">
-  <div class="card">
 
-    <h2 class="logo-font mb-4 text-center text-black mb-4 mt-5">{% trans "Sign In" %}</h2>
+{% load crispy_forms_tags %}
+<hr>
+<h2 class="logo-font mb-4 text-center text-black mb-4 mt-5">{% trans "Sign In" %}</h2>
+<hr>
 
+{% get_providers as socialaccount_providers %}
 
-    {% get_providers as socialaccount_providers %}
+{% if socialaccount_providers %}
+<p>{% blocktrans with site.name as site_name %}Please sign in with one
+  of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a>
+  for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
 
-    {% if socialaccount_providers %}
-    <p>{% blocktrans with site.name as site_name %}Please sign in with one
-      of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a>
-      for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
+<div class="socialaccount_ballot">
 
-    <div class="socialaccount_ballot">
+  <ul class="socialaccount_providers">
+    {% include "socialaccount/snippets/provider_list.html" with process="login" %}
+  </ul>
 
-      <ul class="socialaccount_providers">
-        {% include "socialaccount/snippets/provider_list.html" with process="login" %}
-      </ul>
+  <div class="login-or">{% trans 'or' %}</div>
 
-      <div class="login-or">{% trans 'or' %}</div>
-
-    </div>
-
-    {% include "socialaccount/snippets/login_extra.html" %}
-
-    {% else %}
-    <p class="small text-muted text-center">{% blocktrans %}If you have not created an account yet, then please
-      <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
-    {% endif %}
-
-    <form class="login" method="POST" action="{% url 'account_login' %}">
-      {% csrf_token %}
-      {{ form|crispy }}
-      {% if redirect_field_value %}
-      <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-      {% endif %}
-      <div class="justify-content-md-center">
-        <a class="btn btn-outline-black rounded mt-4" href="{% url 'home' %}">Home</a>
-        <button class="btn btn-success rounded mt-4" type="submit">{% trans "Sign In" %}</button>
-      </div>
-      <p class="mt-4 text-center">
-        <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-      </p>
-    </form>
-  </div>
 </div>
+
+{% include "socialaccount/snippets/login_extra.html" %}
+
+{% else %}
+<p class="small text-muted text-center">{% blocktrans %}If you have not created an account yet, then please
+  <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
+{% endif %}
+
+<form class="login" method="POST" action="{% url 'account_login' %}">
+  {% csrf_token %}
+  {{ form|crispy }}
+  {% if redirect_field_value %}
+  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+  {% endif %}
+  <div class="justify-content-md-center">
+    <a class="btn btn-outline-black rounded mt-4" href="{% url 'home' %}">Home</a>
+    <button class="btn btn-success rounded mt-4" type="submit">{% trans "Sign In" %}</button>
+  </div>
+  <p class="mt-4 text-center">
+    <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+  </p>
+</form>
+
+
 {% endblock %}
