--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
     <!-- User style css -->
-    <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    <link rel="stylesheet" href="{% static '/css/base.css' %}">
     <!-- Favicon -->
     <link rel="icon" type="image/png"
         href="https://ci-ms4-lovefitness.s3.eu-west-2.amazonaws.com/media/favicon/favicon.ico" />
