--- a/templates/base.html
+++ b/templates/base.html
@@ -261,7 +261,7 @@
                 </div>
     </footer>
     {% block postloadjs %}
-    <script src="{% static 'js/toast.js' %}"></script>
+    <script src="{% static 'js/toast.js' %}" type="text/css"></script>
     {% endblock %}
 </body>
 
