--- a/templates/base.html
+++ b/templates/base.html
@@ -55,6 +55,7 @@
             <div class="col-12 col-lg-3 py-1 py-lg-0 text-center text-lg-left ">
                 <a href="{% url 'home' %}" class="nav-link main-logo-link">
                     <h2 class="logo-font text-black my-0"><strong>Love</strong> Fitness</h2>
+                    <img src="media/logo.png" alt="">
                 </a>
             </div>
             <!-- Search -->
