--- a/templates/base.html
+++ b/templates/base.html
@@ -54,10 +54,16 @@
         <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
             <div class="col-12 col-lg-3 py-1 py-lg-0 text-center text-lg-left ">
                 <a href="{% url 'home' %}" class="nav-link main-logo-link">
-                    <h2 class="logo-font text-black my-0"><strong>Love</strong> Fitness</h2>
-                    <img src="media/logo.png" alt="">
+                    <!-- <h2 class="logo-font text-black my-0"><strong>Love</strong> Fitness</h2> -->
+                    <img src="media/logo.jpg" alt="">
                 </a>
+
             </div>
+            <a class="navbar-brand" href="/">
+                <div class="logo-image">
+                    <img src="media/logo.jpg" class="img-fluid">
+                </div>
+            </a>
             <!-- Search -->
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 ">
                 <form method="GET" action="{% url 'products' %}">
